--- a/assets/css/modules/_media.scss
+++ b/assets/css/modules/_media.scss
@@ -32,9 +32,29 @@
                 .hero-dec-bottom{
                     display: none;
                 }
+                .hero-caption-parent{
+                    .container{
+                        h4{
+                            font-size: 15px;
+                        }
+                        h1{
+                            font-size: 45px;
+                            line-height: 60px;
+                        }
+                        .click-menu{
+                            padding: 14px 18px;
+                            font-size: 13px;
+                            font-weight: 700;
+                            i{
+                                margin-left: 30px;
+                                margin-bottom: 3px;
+                            }   
+                        }
+                    }
+                }
             }
             .container{
-                padding: 0 40px;
+                
                 .header-top{
                     padding: 10px 0;
 
@@ -44,6 +64,14 @@
                         }
                     }
                 }
+                .hide-hBottom{     
+                    transform: translateY(-44px);
+                }
+            }
+        }
+        .embedded-video-parent{
+            iframe{
+                width: 890px !important;
             }
         }
     }
@@ -67,6 +95,27 @@
                 }
                 .hero-dec-bottom{
                     display: none;
+                }
+                .hero-caption-parent{
+                    .container{
+                        padding: 0 30px;
+                        h4{
+                            font-size: 15px;
+                        }
+                        h1{
+                            font-size: 45px;
+                            line-height: 60px;
+                        }
+                        .click-menu{
+                            padding: 14px 18px;
+                            font-size: 13px;
+                            font-weight: 700;
+                            i{
+                                margin-left: 30px;
+                                margin-bottom: 3px;
+                            }   
+                        }
+                    }
                 }
             }
             .container{
@@ -138,8 +187,23 @@
                         }
                     }
                 }
+                .hide-hBottom{     
+                    transform: translateY(-44px);
+                }
             }
         }
+        .hero-dec-footer{
+            .container{
+                @include container;
+                padding:  0 30px;   
+            }
+        }
+        .brush-bottom{
+            position: absolute;
+            bottom: -1px;
+            z-index: 12;
+        }
+        
     }
  }
 
@@ -162,6 +226,27 @@
                 .hero-dec-bottom{
                     display: none;
                 }
+                .hero-caption-parent{
+                    .container{
+                        padding: 0 30px;
+                        h4{
+                            font-size: 15px;
+                        }
+                        h1{
+                            font-size: 40px;
+                            line-height: 60px;
+                        }
+                        .click-menu{
+                            padding: 14px 18px;
+                            font-size: 13px;
+                            font-weight: 700;
+                            i{
+                                margin-left: 30px;
+                                margin-bottom: 3px;
+                            }   
+                        }
+                    }
+                }
             }
             .container{
                 padding: 0 00px;
@@ -175,6 +260,8 @@
                     }
                 }
                 .header-bottom{
+                    border-left: none;
+                    border-right: none;
                     .header-bottom-inner{
                         .navbar{
                             .navbar-toggler{
@@ -232,6 +319,16 @@
                         }
                     }
                 }
+                .hide-hBottom{     
+                    transform: translateY(-44px);
+                }
+            }
+        }
+        .hero-dec-footer{
+            bottom: 80px;
+            .container{
+                @include container;
+                padding:  0 30px;   
             }
         }
     }
@@ -257,6 +354,28 @@
                 .hero-dec-bottom{
                     display: none;
                 }
+                .hero-caption-parent{
+                    z-index: 500;
+                    .container{
+                        padding: 0 20px;
+                        h4{
+                            font-size: 15px;
+                        }
+                        h1{
+                            font-size: 35px;
+                            line-height: 45px;
+                        }
+                        .click-menu{
+                            padding: 14px 18px;
+                            font-size: 12px;
+                            font-weight: 700;
+                            i{
+                                margin-left: 30px;
+                                margin-bottom: 3px;
+                            }   
+                        }
+                    }
+                }
             }
             .container{
                 padding: 0 00px;
@@ -265,6 +384,8 @@
                 }
                 .header-bottom{
                     padding: unset;
+                    border:  none;
+                    border-bottom: 1px solid $borderEEE;
                     .header-bottom-inner{
                         .navbar{
                             padding-left: 10px;
@@ -324,6 +445,7 @@
                             }
                             .cta-header{
                                 .cart-details{
+                                    display: none;
                                     width: 300px;
                                     height: 470px;
                                     padding: 25px 25px;
@@ -437,6 +559,9 @@
                                         }
                                     }
                                 }
+                                .show-cart-details{
+                                    display: block !important;
+                                }
                                     ul{
                                         margin-left: 0px;
                                         li:first-child{
@@ -480,7 +605,30 @@
                                 
                             }
                         }
+                        .share-details{
+                            width: 100%;
+                            height: 108px;
+                            ul{
+                                height: 100%;
+                                li{
+                                    
+                                    height: 100%;
+                                    margin: 0 10px;
+                                    a{
+                                        font-size: 10px;
+                                        height: 100%;
+                                        width: auto;
+                              
+                                    }
+                              
+                                }
+                            }
+                        }
+                        
                     }
+                }
+                .hide-hBottom{     
+                    transform: translateY(0px);
                 }
             }
         }
